css/footer.css
footer {
  padding: 1rem;
}

.footer_text_container {
  margin: 80px 0px 64px 0;
  max-width: 480px;
}

.footer_svg {
  margin-bottom: 24px;
}

.footer_text p {
  font-family: var(--light);
  font-size: var(--p);
  line-height: 1.5;
}

.links h3 {
  font-family: var(--light);
  font-size: var(--base-size);
  color: var(--medium-grey);
  padding-bottom: 18px;
}

.links {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.support,
.about {
  margin-bottom: 64px;
}

.social_media {
  padding-bottom: 32px;
}

.copyright {
  border-top: 1px solid var(--black);
  padding: 24px 0 24px 0;
  font-size: var(--p-small);
}

@media screen and (min-width: 1024px) {
  .desktop_flex {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin: 94px 16px 16px 0;
  }

  .footer_text_container {
    margin: 0;
  }

  .copyright {
    margin: 24px 36px 8px 36px;
  }
}

@media screen and (min-width: 1440px) {


  .footer_text {
    min-width: 420px;
    margin-right: 80px;
  }

  .links {
    min-width: 375px;
    padding-left: 80px;
  }
}

